--- a/static/site.css
+++ b/static/site.css
@@ -7,3 +7,20 @@
     display:flex;
     flex-wrap: wrap;
 }
+
+#lost-img {
+    text-align: center;
+}
+
+#lost-h1 {
+    text-align: center;
+    color: white;
+}
+
+#lost-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    /* bring your own prefixes */
+    transform: translate(-50%, -50%);
+}
