--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,11 @@
                 <div class="navbar-nav">
                     <a class="nav-link" href="/melons">All Melons</a>
                     <a class="nav-link" href="/cart">Cart</a>
+                    {% if 'username' in session %}
+                        <a class="nav-link" href="/logout">Log Out</a>
+                    {% else %}
+                        <a class="nav-link" href="/login">Log In</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
@@ -21,7 +26,7 @@
 
   <div class="container">
 
-    {% for message in get_flashed_message() %}
+    {% for message in get_flashed_messages() %}
         <p class="alert alert-warning">{{message}}</p>
     {% endfor %}
     
